fix overflow issue

--- a/frontend/src/components/LogsView.css
+++ b/frontend/src/components/LogsView.css
@@ -7,7 +7,12 @@
 }
 
 .logs {
-  width: 100%;
+  position: absolute;
+  top: 24px;
+  left: 0;
+  bottom: 0;
+  right: 0;
+  overflow-y: auto;
 }
 
 .log {
